# rclone-manager

./: .browserslistrc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.json  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  LINTING.md  PKGBUILD  PKGBUILD-git  README.es-ES.md  README.fr-FR.md  README.md  README.ru-RU.md  README.tr-TR.md  README.zh-CN.md  angular.json  crowdin.yml  docker-compose.yml  entrypoint.sh  eslint.config.js  flatpak.metainfo.xml  index.html  main-5BNB2R7H.js  main-DFXLJU2O.js  main-HSD4DRCA.js  main-XZVNV5WK.js  package-lock.json  package.json  proxy.conf.json  rclone-rc-limitations.md  styles-4NXV275X.css  styles-EKWV5GW6.css  styles-RRVAOQUM.css  (+2 more)
crates/rcman/: CHANGELOG.md  Cargo.toml  README.md
crates/rcman/examples/: basic_usage.rs
crates/rcman/src/: lib.rs  manager.rs
src-tauri/: .clippy.toml  .gitignore  Cargo.toml  Info.plist  _e.plist  build.rs  entitlements.mac.plist  entitlements.plist  hooks.nsh  rustfmt.toml  tauri.conf.headless.json  tauri.conf.json  tauri.conf.json.old
src-tauri/apple-file-provider/: Entitlements.plist  Info.plist
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/librclone_patches/: README.md  config_encryption_patch.go  config_encryption_patch_test.go  core_command_patch.go  core_command_patch_test.go  doh_patch.go  doh_patch_test.go  env_patch.go  go.mod  go.sum  init_patch.go  native_endpoints_patch.go  native_endpoints_patch_test.go
src-tauri/linux/: flatpak.metainfo.xml  postinstall.sh  preremove-gui.sh  preremove.sh  template-headless.desktop  template.desktop  templates.desktop
src-tauri/linux/AUR/: PKGBUILD  PKGBUILD-git  PKGBUILD-headless  publish-to-aur.sh
src-tauri/linux/headless/: postinstall.sh  preremove.sh  template-headless.desktop
src-tauri/mac/: homebrew-release.sh  rclone-manager.rb.template
src-tauri/resources/: oauth-template.html  serve-template.html
src-tauri/resources/send_to/: dolphin_action.desktop  macos_document.wflow  macos_info.plist  nautilus_extension.py  nautilus_script.sh  nemo_action.nemo_action
src-tauri/rman-file-provider/: Cargo.toml  Info.plist
src-tauri/rman-file-provider/src/: bridge.rs  enumerator.rs  item.rs  main.rs  provider.rs  state.rs
src-tauri/src/: api.rs  config.rs  disk_helper.rs  headless.rs  lib.rs  main.rs  mount.rs  rclone_api.rs  tracker.rs  tray.rs
src-tauri/src/core/: app_state.rs  check_binaries.rs  cli.rs  commands.rs  config_extractor.rs  debug.rs  event_listener.rs  initialization.rs  mod.rs  paths.rs  server.rs  settings.rs  settings_store.rs  spawn_helpers.rs  startup.rs  tray.rs
src-tauri/src/core/alerts/: cache.rs  commands.rs  engine.rs  event_ext.rs  mod.rs  seed.rs  template.rs  types.rs
src-tauri/src/core/alerts/dispatch/: email.rs  mod.rs  mqtt.rs  os_toast.rs  script.rs  telegram.rs  webhook.rs  whatsapp.rs
src-tauri/src/core/automation/: commands.rs  engine.rs  mod.rs  watcher.rs
src-tauri/src/core/initialization/: apply_settings.rs  automation.rs  bootstrap.rs  cache.rs  connectivity.rs  mod.rs  scheduler.rs  watchers.rs
src-tauri/src/core/lifecycle/: auto_updater.rs  mod.rs  shutdown.rs  startup.rs
src-tauri/src/core/scheduler/: commands.rs  engine.rs  mod.rs
src-tauri/src/core/security/: commands.rs  credential_manager.rs  env_manager.rs  mod.rs  password_validation.rs
src-tauri/src/core/settings/: manager.rs  migration.rs  mod.rs  rclone_backend.rs  schema.rs  settings.rs  settings_store.rs
src-tauri/src/core/settings/backup/: archive_utils.rs  backup_manager.rs  export_categories.rs  legacy_restore.rs  mod.rs  rclone_config_provider.rs  restore_manager.rs
src-tauri/src/core/tray/: actions.rs  core.rs  icon.rs  menu.rs  mod.rs  tray.rs  tray_action.rs
src-tauri/src/rclone/: api.rs  mod.rs  mount.rs
src-tauri/src/rclone/api/: api.rs  api_command.rs  api_query.rs  engine.rs  flags.rs  mod.rs  state.rs
src-tauri/src/rclone/backend/: cache.rs  connectivity.rs  http_transport.rs  librclone_transport.rs  manager.rs  mod.rs  rclone_ffi.rs  routing_transport.rs  runtime.rs  schema.rs  state.rs  transport.rs  types.rs
src-tauri/src/rclone/commands/: apple_file.rs  archive.rs  backend.rs  common.rs  filesystem.rs  job.rs  mobile_oauth.rs  mod.rs  mount.rs  oauth.rs  remote.rs  serve.rs  sync.rs  system.rs  upload.rs
src-tauri/src/rclone/engine/: configuration.rs  core.rs  error.rs  lifecycle.rs  mod.rs  monitoring.rs  poller.rs  post_start.rs  process.rs
src-tauri/src/rclone/queries/: filesystem.rs  flags.rs  mod.rs  mount.rs  remote.rs  serve.rs  stats.rs  system.rs  vfs.rs
src-tauri/src/rclone/state/: automations.rs  cache.rs  engine.rs  job.rs  log.rs  mod.rs  options.rs  scheduled_tasks.rs  watcher.rs
src-tauri/src/server/: mod.rs  routes.rs  state.rs
src-tauri/src/server/handlers/: alerts.rs  audio_cover.rs  backend.rs  backup.rs  common.rs  debug.rs  files.rs  flags.rs  i18n.rs  jobs.rs  mod.rs  mounts.rs  remotes.rs  scheduler.rs  security.rs  settings.rs  system.rs  upload.rs  vfs.rs
src-tauri/src/utils/: async_operations.rs  builder.rs  check_rclone.rs  constants.rs  file_helper.rs  github_client.rs  i18n.rs  json_helpers.rs  log.rs  mod.rs  network.rs  notification.rs  process.rs  security.rs  shortcuts.rs  startup.rs  types.rs
src-tauri/src/utils/app/: audio.rs  builder.rs  mod.rs  notification.rs  platform.rs  protocol.rs  send_to.rs  ui.rs  updater.rs
src-tauri/src/utils/io/: file_helper.rs  mod.rs  network.rs  terminal.rs
src-tauri/src/utils/logging/: file_writer.rs  log.rs  mod.rs
src-tauri/src/utils/process/: command.rs  mod.rs  process_manager.rs
src-tauri/src/utils/rclone/: downloader.rs  endpoints.rs  extractor.rs  mod.rs  mount.rs  process_common.rs  provision.rs  updater.rs  util.rs
src-tauri/src/utils/types/: all_types.rs  automation.rs  backup_types.rs  core.rs  events.rs  jobs.rs  logs.rs  mod.rs  monitoring.rs  origin.rs  rclone.rs  remotes.rs  scheduled_task.rs  settings.rs  state.rs  updater.rs
src-tauri/windows/: hooks.nsh  wix-fragment.wxs
(+818 files in other folders)
