[package]
name = "rclone-manager"
version = "0.2.0"
description = "RClone Manager is a user-friendly GUI for Rclone, designed to simplify the process of managing and transferring files across various cloud storage services. With its intuitive interface, users can easily configure and execute Rclone commands without needing extensive technical knowledge."
authors = ["Hakan İSMAİL"]
edition = "2024"
default-run = "rclone-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rclone_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1.45.1", features = ["full", "process"] }
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-os = "2"
zip = "4.0.0"
reqwest = { version = "0.12.19", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
once_cell = "1.21.3"
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }
which = "7.0.3"
walkdir = "2.5.0"
sha2 = "0.10.9"
tempfile = "3.20.0"
uuid = { version = "1.18", features = ["v4"] }
thiserror = "2.0"
netstat2 = "0.11.2"
sysinfo = "0.33.1"
tauri-plugin-shell = "2"
tokio-cron-scheduler = "0.13.0"
croner = "3.0.1"
sevenz-rust2 = "0.20.0"

# rcman - Rust Config Manager library
# Path is used for local development, version is used when path is not available (crates.io)
# Note: keychain feature is added via target-specific dependencies below (not supported on Android/iOS)
rcman = { version = "0.1.1", path = "../../rcman", features = ["backup", "derive", "profiles"] }

urlencoding = "2.1"

# Web server dependencies (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"], optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
anyhow = {version = "1.0.98", optional = true}
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tokio-util = { version = "0.7.17", features = ["io"] }
mime_guess = "2.0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
zbus = "5.7.1"
futures-lite = "2.6.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading", "Win32_Storage_FileSystem"] }
windows = { version = "0.60.0", features = ["Networking_Connectivity"] }
shellexpand = "3.1.1"
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"], optional = true }
url = { version = "2.5", optional = true }
rcman = { version = "0.1.0", path = "../../rcman", features = ["keychain", "profiles"] }

[features]
default = ["updater"]
updater = ["tauri-plugin-updater", "url"]
web-server = ["axum", "tower-http", "futures", "async-stream", "axum-server", "rustls", "base64", "anyhow", "clap"]
portable = []
flatpak = []
deb = []
rpm = []
arch = []

