[package]
name = "rclone-manager"
version = "0.2.5"
description = "RClone Manager is a user-friendly GUI for Rclone, designed to simplify the process of managing and transferring files across various cloud storage services. With its intuitive interface, users can easily configure and execute Rclone commands without needing extensive technical knowledge."
authors = ["Hakan İSMAİL"]
edition = "2024"
default-run = "rclone-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rclone_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full", "process"] }
tauri-plugin-os = "2"
zip = "8.2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "rustls", "multipart", "stream", "query"] }
tauri-plugin-notification = "2"
once_cell = "1.21.3"
log = "0.4.29"
chrono = { version = "0.4.44", features = ["serde"] }
which = "8.0.1"
walkdir = "2.5.0"
sha2 = "0.10.9"
tempfile = "3.26.0"
uuid = { version = "1.19", features = ["v4"] }
thiserror = "2.0"
netstat2 = "0.11.2"
sysinfo = "0.38.3"
tokio-cron-scheduler = "0.15.1"
croner = "3.0.1"
sevenz-rust2 = "0.20.2"
clap = { version = "4.5", features = ["derive", "env"] }
lofty = "0.24"
base64 = "0.22"
url = "2.5"
handlebars = "6.2.0"
rumqttc = "0.24"
rustls-native-certs = "0.8"
rustls = { version = "0.23", features = ["ring"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname"] }


tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

# rcman - Rust Config Manager library
rcman = { path = "../../rcman", version = "0.1.7", features = ["backup", "derive", "profiles", "keychain", "encrypted-file"] }

urlencoding = "2.1"
futures = { version = "0.3" }

# Web server dependencies (optional)
axum = { version = "0.8", features = ["multipart"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
async-stream = { version = "0.3", optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
anyhow = {version = "1.0.102", optional = true}
tokio-util = { version = "0.7.18", features = ["io"] }
mime_guess = "2.0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.31.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14.0"
futures-lite = "2.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation"] }
windows = { version = "0.62.2", features = ["Networking_Connectivity"] }
shellexpand = "3.1.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[features]
web-server = ["axum", "tower-http", "async-stream", "axum-server", "anyhow"]

# Container
container = ["web-server"]

# For GUI features
default = ["desktop", "tray"]
desktop = ["tauri-plugin-shell", "tauri-plugin-window-state", "tauri-plugin-dialog", "tauri/devtools"]
tray = ["tauri/tray-icon", "tauri/image-png"]

# Managed by package managers or not compatible with updater
portable = ["desktop", "tray"]
flatpak = ["desktop", "tray"]


[dev-dependencies]
tauri = { version = "2", features = ["test"] }
