[package]
name = "rclone-manager"
version = "0.3.0"
description = "RClone Manager is a user-friendly GUI for Rclone, designed to simplify the process of managing and transferring files across various cloud storage services. With its intuitive interface, users can easily configure and execute Rclone commands without needing extensive technical knowledge."
authors = ["Hakan İSMAİL"]
edition = "2024"
default-run = "rclone-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rclone_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"
zip = "8"
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls", "multipart", "stream", "query"] }
once_cell = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
which = "8"
walkdir = "2"
sha2 = "0.11"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
netstat2 = "0.11"
sysinfo = "0.38"
tokio-cron-scheduler = "0.15"
croner = "3"
sevenz-rust2 = "0.21"
clap = { version = "4", features = ["derive", "env"] }
lofty = "0.24"
base64 = "0.22"
url = "2"
handlebars = "6"
rumqttc = "0.25"
rustls-native-certs = "0.8"
rustls = { version = "0.23", features = ["ring"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname"] }
sys-locale = "0.3"


tauri-plugin-shell = { version = "2", optional = true, default-features = false }
tauri-plugin-dialog = { version = "2", optional = true, default-features = false }
tauri-plugin-clipboard-manager = { version = "2", optional = true, default-features = false }
tauri-plugin-notification = { version = "2", optional = true, default-features = false }
tauri-plugin-deep-link = { version = "2", optional = true, default-features = false }
tauri-plugin-os = { version = "2", optional = true, default-features = false }
tauri-plugin-opener = { version = "2", optional = true, default-features = false }

# rcman - Rust Config Manager library
rcman = { version = "0.2", features = ["backup", "derive", "profiles", "keychain", "encrypted-file"] }

urlencoding = "2"
futures = { version = "0.3" }

# Web server dependencies (optional)
axum = { version = "0.8", features = ["multipart"], optional = true }
tower-http = { version = "0.7", features = ["cors", "fs", "trace"], optional = true }
async-stream = { version = "0.3", optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
anyhow = {version = "1", optional = true}
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
parking_lot = "0.12"
notify = "8.2"

[target.'cfg(unix)'.dependencies]
nix = "0.31"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
futures-lite = "2"
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }
windows = { version = "0.62", features = ["Networking_Connectivity"] }
shellexpand = "3"
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = { version = "2", optional = true, default-features = false }
tauri-plugin-updater = { version = "2", features = ["rustls-tls"], optional = true, default-features = false }

[features]
updater = ["dep:tauri-plugin-updater"]
tauri-plugin-notification = ["dep:tauri-plugin-notification"]
tauri-plugin-deep-link = ["dep:tauri-plugin-deep-link"]

web-server = ["axum", "tower-http", "async-stream", "axum-server", "anyhow", "updater"]

# Container
container = ["web-server"]

shared-tauri = ["tauri-plugin-dialog/xdg-portal", "tauri-plugin-notification", "tauri-plugin-deep-link", "tauri-plugin-clipboard-manager", "tauri-plugin-shell", "tauri-plugin-os"]

# For GUI features
desktop = ["tauri-plugin-window-state", "tauri/devtools", "updater", "shared-tauri", "tauri-plugin-opener"]
tray = ["tauri/tray-icon", "tauri/image-png", "tauri-plugin-opener"]
default = ["desktop", "tray"]

# Managed by package managers or not compatible with updater
portable = ["desktop", "tray"]
flatpak = ["desktop", "tray"]

# In-process rclone via librclone FFI (mobile target).
librclone = []
mobile = ["librclone", "shared-tauri"]


[dev-dependencies]
tauri = { version = "2", features = ["test"] }
